--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+__pycache__
+/backend/venv
+/backend/migrations
+/backend/.env
+/frontend/node_modules
 /.pnp
 .pnp.js
 
@@ -9,15 +13,15 @@
 /coverage
 
 # production
-/build
+/frontend/build
 
 # misc
-.DS_Store
+/frontend.DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+/frontend/npm-debug.log*
+/frontend/yarn-debug.log*
+/frontend/yarn-error.log*
